Replace model classes with records.